--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@
 
 2- Add funciton to delete the task from the bin icon.  ✔✔✔✔
 
-3- Add funciton to edit the task from the pen icon as a form of an ALERT that covers the screen.
+3- Add funciton to edit the task from the pen icon as a form of an ALERT that covers the screen. ✔✔✔✔
 
 4- Add function to mark a task as complete from the checkbox.
 
@@ -21,7 +21,7 @@
 
 8- Fix no tasks header implementation to be more maintainable (Make a function to be called to check).
 
-
+9- Check for input data to (Doesnt start with a number, its longer than 5 char) for both input box and edit box
 
 
 
